Paperclip logo for school , * Upload from settings page * Logo displayed in login page , dashboard sidebar and pdf header. * Use default fedena logo as fallback
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2403 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/configuration/settings.html.erb
+++ b/app/views/configuration/settings.html.erb
@@ -32,6 +32,7 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
+  <%= error_messages_for :school_detail %>
 
   <% form_for(:configuration,:html=> {:multipart=>true}) do |c| %>
     <div class="box">
@@ -93,7 +94,7 @@
       <div class="label-field-pair">
         <label for="configuration_currency_type"><%= t('upload_logo') %></label>
         <div class="text-input-bg">
-          <%= file_field 'upload', 'datafile', :size=>12 %>
+          <%= file_field 'school_detail','school_logo', :size=>12 %>
         </div>
       </div>
       <div class="label-field-pair">
