Revert r2404 for backward compatibility
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2405 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/student/profile.css
+++ b/public/stylesheets/student/profile.css
@@ -9,6 +9,12 @@
     margin-left:50px;
     border:8px solid #EFEFD1;
 }
+#profile_picture_display img {
+    width:125px;
+    height:125px;
+    /*padding-top:25px;
+    padding-left:32px;*/
+}
 #student_main_info {
     float:left;
     margin-left:50px;
