--- a/app/views/archived_student/generated_report4.html.erb
+++ b/app/views/archived_student/generated_report4.html.erb
@@ -58,7 +58,7 @@
               <% unless exam_score.nil?  %>
               <% if exam_group.exam_type == "MarksAndGrades" %>
                 <td class="col-3"><% unless @exam.nil?  %>
-<%= exam_score.marks %> | <%= @exam.maximum_marks %> | <%= exam_score.grading_level.name %></td>
+<%= exam_score.marks %> | <%= @exam.maximum_marks %> | <%= exam_score.grading_level.nil? ? '-' : exam_score.grading_level.name %></td>
       <% end  %>
       <% elsif exam_group.exam_type == "Marks" %>
                 <td class="col-3"><%= exam_score.marks unless @exam.nil? %> | <%= @exam.maximum_marks unless @exam.nil?%></td>
@@ -103,7 +103,7 @@
     </table>
     <% if @mmg == @g %>
       <% percentage = (@marks_total*100/@max_total.to_f)  unless @max_total==0 %>
-      <h4><%= t('total_marks') %> = <%= @marks_total %> | <%= t('aggregate') %> % = <%=percentage %> </h4>
+      <h4><%= t('total_marks') %> = <%= @marks_total %> | <%= t('aggregate') %> % = <%= sprintf("%.2f", percentage) %> </h4>
     <% end %>
     <div class="extender"></div>
   </div></div>
