--- a/app/views/batch_transfers/graduation.html.erb
+++ b/app/views/batch_transfers/graduation.html.erb
@@ -47,6 +47,10 @@
 
 
     <p><%= t('uncheck_message') %>.</p>
+    <div class="sel-list">
+      <%= t('select') %>: <%= link_to_function t('all'), "$$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>,
+      <%= link_to_function t('none'), "$$('input.right').each(function(checkbox) { checkbox.checked = false; });" %>
+    </div>
     <ul id="category-list">
       <li class="listheading">
         <div class="heading-no"><%= t('adm_no') %></div>
@@ -56,7 +60,7 @@
         <li class="list<%=cycle('odd', 'even')%>">
           <div class="category-delete"><%= student.admission_no %></div>
           <div class="category-name"><%= student.full_name %></div>
-          <div class="category-edit"><%= check_box_tag 'graduate[students][]', student.id, true %></div>
+          <div class="category-edit"><%= check_box_tag 'graduate[students][]', student.id, true,:class=>"right" %></div>
         </li>
       <% end %>
     </ul>
