--- a/app/views/employee/edit_personal.erb
+++ b/app/views/employee/edit_personal.erb
@@ -55,7 +55,7 @@
 
           <div class="label-field-pair">
             <label><%= t('marital_status') %></label>
-            <div class="text-input-bg"><%= select :employee, :marital_status, [["#{t('single')}","single"], ["#{t('married')}","married"]] %></div>
+            <div class="text-input-bg"><%= select :employee, :marital_status, [["#{t('single')}","single"], ["#{t('married')}","married"],["#{t('divorced')}","divorced"]] %></div>
             <div class="extender"></div>
           </div>
 
