--- a/app/views/archived_student/generated_report4_pdf.erb
+++ b/app/views/archived_student/generated_report4_pdf.erb
@@ -47,12 +47,12 @@
               <% unless exam_score.nil?  %>
               <% if exam_group.exam_type == "MarksAndGrades" %>
                 <td class="col-3"><% unless @exam.nil?  %>
-<%= exam_score.marks %> | <%= @exam.maximum_marks %> | <%= exam_score.grading_level.name %></td>
+<%= exam_score.marks %> | <%= @exam.maximum_marks %> | <%= exam_score.grading_level.nil? ? '-' : exam_score.grading_level.name %></td>
       <% end  %>
       <% elsif exam_group.exam_type == "Marks" %>
                 <td class="col-3"><%= exam_score.marks unless @exam.nil? %> | <%= @exam.maximum_marks unless @exam.nil?%></td>
               <% else %>
-                <td class="col-3"><%= exam_score.grading_level.name unless exam_score.nil?%></td>
+                <td class="col-3"><%= exam_score.grading_level.nil? ? '-' : exam_score.grading_level.name  unless exam_score.nil?%></td>
                 <% @g = 0 %>
               <% end %>
               <% else %>
@@ -93,7 +93,7 @@
     </div>
     <% if @mmg == @g %>
       <% percentage = (@marks_total*100/@max_total.to_f)  unless @max_total==0 %>
-      <h4><%= t('total_marks') %> = <%= @marks_total %> | <%= t('aggregate') %> % = <%=percentage %> </h4>
+      <h4><%= t('total_marks') %> = <%= @marks_total %> | <%= t('aggregate') %> % = <%= sprintf("%.2f",percentage)  %> </h4>
     <% end %>
   </div>
 
