--- a/app/views/exam_groups/show.html.erb
+++ b/app/views/exam_groups/show.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("/images/examination/show_exam.png") %>
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('view_exam_groups') %></h3>
   <div id="app-back-button">
@@ -56,7 +56,11 @@
 
     <div class="update_msg">
       <% if permitted_to? :edit, :exams %>
-        <h4><%= in_place_editor_field :exam_group, :name %></h4>
+        <h4>
+          <div id =<%="exam_group_name_#{@exam_group.id}_edit"%>>
+            <%= in_place_editor_field :exam_group, :name %>
+          </div>
+        </h4>
       <% else %>
         <h4><span><%= @exam_group.name %></span></h4>
       <% end %>
@@ -79,15 +83,22 @@
           <% end %>
         </tr>
         <% @exam_group.exams.each do |exam| %>
-
+          <% @exam = exam %>
           <% if @employee_subjects.include?(exam.subject.id) or @current_user.admin? or @user_privileges.map{|p| p.name}.include?('ExaminationControl') or @user_privileges.map{|p| p.name}.include?('EnterResults') %>
             <tr class="tr-<%= cycle('odd', 'even') %>">
               <% @exam = exam %>
               <td class="col-2"><%= link_to exam.subject.name, [@exam_group, exam] %></td>
 
               <% if permitted_to? :edit, :exams %>
-                <td class="col-1"><%= in_place_editor_field :exam, :maximum_marks,{},{:cols=>1} %></td>
-                <td class="col-1"><%= in_place_editor_field :exam, :minimum_marks,{},{:cols=>1} %></td>
+                <td class="col-1">
+                  <div id=<%= "exam_maximum_marks_#{@exam.id}_edit" %>>
+                    <%= in_place_editor_field :exam, :maximum_marks,{},{:cols=>1} %>
+                  </div>
+                </td>
+                <td class="col-1">
+                  <div id=<%= "exam_minimum_marks_#{@exam.id}_edit" %>>
+                  <%= in_place_editor_field :exam, :minimum_marks,{},{:cols=>1} %></td>
+                </div>
                 <td class="col-1">
                   <% if @exam_group.result_published %>
                     <small><s><%= t('edit_text') %></s></small>
