--- a/public/stylesheets/exam/generated_report2_pdf.css
+++ b/public/stylesheets/exam/generated_report2_pdf.css
@@ -1,7 +1,7 @@
 
 
 #page-yield {
-    width:800px;
+    width:-moz-max-content;
     margin: 0 auto;
     float: left;
     overflow: hidden;
@@ -13,7 +13,7 @@
 
 
 .hor_line{
-    width:800px;
+    width:-moz-max-content;
     background: #333333;
     height: 1px;
 }
