--- a/app/views/finance/view_employee_payslip.html.erb
+++ b/app/views/finance/view_employee_payslip.html.erb
@@ -92,7 +92,8 @@
 </div>
 <div class="pdf-report">
   <% if @monthly_payslips.first.is_approved == false and @monthly_payslips.first.is_rejected == false%>
-    <%= link_to "#{t('approve')}", {:controller=>"finance", :action=>"employee_payslip_approve",:id =>@monthly_payslips.first.employee_id,:id2 => params[:salary_date] } %>
+    <%#= link_to_remote "#{t('approve')}", {:controller=>"finance", :action => "employee_payslip_approve_form",:id =>@monthly_payslips.first.employee_id,:id2 => params[:salary_date] } %>
+  <%= link_to_remote "#{t('approve')}",:url=>{:controller => "finance", :action => "employee_payslip_accept_form", :id=> @monthly_payslips.first.employee_id, :id2=>params[:salary_date]}, :confirm=>"#{t('delete_confirm_msg')}" %>
     <%= link_to_remote "#{t('reject')}",:url=>{:controller => "finance", :action => "employee_payslip_reject_form", :id=> @monthly_payslips.first.employee_id, :id2=>params[:salary_date]}, :confirm=>"#{t('delete_confirm_msg')}" %>
   <% end %>
 
