--- a/app/views/employee/_view_payslip.erb
+++ b/app/views/employee/_view_payslip.erb
@@ -87,6 +87,10 @@
     <div class="item-name"><b><%= t('net_salary') %></b></div>
     <div class="item-edit"><b><span class="currency-type"><%= @currency_type %></span> <%=@net_amount%></b></div>
   </li>
+  <li class="listodd">
+    <div class="item-name"><b><%= t('remark') %></b></div>
+    <div class="item-edit"><b><span class="currency-type"><%= @monthly_payslips.first.remark %></span></b></div>
+  </li>
 </ul>
 <% if permitted_to? :delete_payslip, :payroll %>
   <div class="edit-delete-link">
