--- a/app/views/finance/_fee_particulars_create_form.html.erb
+++ b/app/views/finance/_fee_particulars_create_form.html.erb
@@ -22,24 +22,24 @@
 
 <div id="grading-levels-form">
 
-  <% form_remote_for  @finance_fee_particular,:url =>{:action => 'fees_particulars_create'}  do |f| %>
+  <% form_remote_for  :finance_fee_particular,:url =>{:action => 'fees_particulars_create'}  do |f| %>
 
     <div id="form-errors"></div>
 
     <div class="label-field-pair">
       <div class="label-container"><label><%= t('fees_text') %> <%= t('master') %> <%= t('category') %></label> </div>
-    <div class="input-container"><%= f.select :finance_fee_category_id, @fees_categories.map { |c| ["#{c.name} - #{c.batch.full_name}", c.id] },:selected=>params[:category_id].to_i%></div>
-   </div>
+    <div class="input-container"><%= f.select(:finance_fee_category_ids, @fees_categories.map { |c| ["#{c.name} - #{c.batch.full_name}", c.id] },{:prompt => "Select Categories"},{:multiple => true,:size => 5}) %></div>
+    </div>
 
-  <div class="label-field-pair">
-    <div class="label-container"> <%= f.label "#{t('name')}"  %></div>
-    <div class="input-container"><%= f.text_field :name %></div>
-   </div>
+    <div class="label-field-pair">
+      <div class="label-container"> <%= f.label "#{t('name')}"  %></div>
+      <div class="input-container"><%= f.text_field :name %></div>
+    </div>
 
-   <div class="label-field-pair">
-    <div class="label-container"><%= f.label "#{t('description')}" %></div>
-    <div class="input-container"><%= f.text_field :description %></div>
-   </div>
+    <div class="label-field-pair">
+      <div class="label-container"><%= f.label "#{t('description')}" %></div>
+      <div class="input-container"><%= f.text_field :description %></div>
+    </div>
     <div class="label-field-pair2">
       <div class="label-container2"><label><%= t('create_using') %></label></div>
       <div class="input-container2">
@@ -47,8 +47,8 @@
             {:checked=>true,:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
               :with => "'select_value='+value")}"}) %><%= t('all') %></div>
         <div class="opt"><%=  radio_button("particulars","select","student",
-  {:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
-  :with => "'select_value='+value")}"}) %><%= t('admission_no') %></div>
+            {:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
+              :with => "'select_value='+value")}"}) %><%= t('admission_no') %></div>
         <div class="opt"> <%= radio_button("particulars","select","category",
             {:onchange => "#{remote_function(:url => {:action => "student_or_student_category"},
               :with => "'select_value='+value")}"}) %><%= t('student_category') %> </div>
@@ -56,15 +56,15 @@
     </div>
 
 
-  <div id="student"></div>
+    <div id="student"></div>
 
-  <div class="label-field-pair">
-    <div class="label-container"><%= f.label "#{t('amount')}" %></div>
-    <div class="input-container"> <%= f.text_field :amount %></div>
-   </div>
+    <div class="label-field-pair">
+      <div class="label-container"><%= f.label "#{t('amount')}" %></div>
+      <div class="input-container"> <%= f.text_field :amount %></div>
+    </div>
 
 
-  <%=  submit_tag "► #{t('create_text')}",:class=>'submit_button' %>
+    <%=  submit_tag "► #{t('create_text')}",:class=>'submit_button' %>
 
-<% end %>
+  <% end %>
 </div>
