--- a/app/views/exam/grouping.html.erb
+++ b/app/views/exam/grouping.html.erb
@@ -31,27 +31,22 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-  <div class="sel-list">
-    <%= t('select') %>: <%= link_to_function t('all'), "$$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>,
-    <%= link_to_function t('none'), "$$('input.right').each(function(checkbox) { checkbox.checked = false; });" %>
-  </div>
   <div class="box">
     <h4><%= t('connect_exams') %></h4>
     <div id="list_content">
       <div id="list">
+        <div class="sel-list">
+          <%= t('select') %>: <%= link_to_function t('all'), "$$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>,
+          <%= link_to_function t('none'), "$$('input.right').each(function(checkbox) { checkbox.checked = false; });" %>
+        </div>
         <% unless @exam_groups.empty? %>
 
           <% form_for :exam_grouping do |f| %>
             <% @exam_groups.each do |e| %>
               <div class="name_list<%=cycle('odd', 'even')%>">
                 <% already_grouped = GroupedExam.find_by_batch_id_and_exam_group_id(@batch.id,e) %>
-                <% if already_grouped.nil? %>
-                  <li>
-                    <label><%= check_box_tag "exam_grouping[exam_group_ids][]", e.id,:html => {:class=>"right"} %>
-                      <div class="att_list_names"><%= e.name %></div></label></li>
-                <% else %>
-                  <li><label><%= check_box_tag "exam_grouping[exam_group_ids][]", e.id,true,:class => "right" %><div class="att_list_names"> <%= e.name %></div></label></li>
-                <% end %>
+                <% already_grouped = already_grouped.nil? %>
+                <li><label><%= check_box_tag "exam_grouping[exam_group_ids][]", e.id,already_grouped,:class=>"right"%><div class="att_list_names"> <%= e.name %></div></label></li>
               </div>
             <% end %>
 
