--- a/app/views/finance/income_details.erb
+++ b/app/views/finance/income_details.erb
@@ -26,18 +26,31 @@
   </div>
 </div>
 <div id="inner-tab-menu">
+  <ul>
+    <li><%= link_to "#{t('pdf_report')}",
+        {:controller => "finance", :action => "income_list_pdf", :start_date => @start_date, :end_date=>@end_date,:id => @income_category.id},:target => '_blank' %></li>
+  </ul>
 </div>
-<% unless @income_categories.empty? %>
+<% unless @incomes.empty? %>
   <div id="page-yield">
-    <table id="listing" align="center">
+    <table id="listing" align="center" width="100%">
       <tr class="tr-head">
-        <td><%= t('name') %></td>
-        <td><%= t('amount') %></td>
+        <td class="name"><%= t('name') %></td>
+        <td class="description"><%= t('description') %></td>
+        <td class="amount"><%= t('amount') %></td>
+        <td class="transaction_date"><%= t('transaction_date') %></td>
+        <td class="transaction_date"><%= t('receipt_no') %></td>
+        <td class="options"></td>
       </tr>
-      <% @income_categories.each do |d| %>
+      <tr class="tr-blank"></tr>
+      <% @incomes.each do |i| %>
         <tr class="tr-<%= cycle('odd','even') %>">
-          <td class="col-3"><%= link_to d.name,:controller => 'finance',:action => 'income_details',:id => d.id,:start => @start_date,:end => @end_date %></td>
-          <td class="col-3"><%= d.total_income(@start_date,@end_date) %></td>
+          <td class="name"><%= i.title %></td>
+          <td class="description"><%= i.description %></td>
+          <td class="amount"><%= i.amount %></td>
+          <td class="transaction_date"><%= i.transaction_date.strftime("%d-%m-%y") %></td>
+          <td class="receipt_no"><%= i.receipt_no %></td>
+          <td><small><%= link_to "#{t('edit_text')}",:action=>'income_edit',:id=>i.id %></small> | <small><%= link_to "#{t('delete_text')}",:action=>'delete_transaction',:id=>i.id %></small></td>
         </tr>
       <% end %>
 
