timetable 500 bug fix
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@2461 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/timetable_pdf.erb
+++ b/app/views/employee/timetable_pdf.erb
@@ -57,7 +57,8 @@
                     <%= tte.subject.batch.course.full_name %>
                   </div>
                   <div class="employee">
-                    <%= tte.subject.elective_group.nil? ? tte.subject.code : (tte.subject.elective_group.subjects.select { |subs| @employee_subjects_ids.include?(subs.id.to_s)  }).first.code %>
+                    <% subject = tte.subject.elective_group.nil? ? tte.subject : (tte.subject.elective_group.subjects.select { |subs| @employee_subjects_ids.include?(subs.id.to_s)  }).first %>
+                    <%= subject.code unless subject.nil? %>
                   </div>
 
                 </div>
