--- a/app/views/finance/update_monthly_report.html.erb
+++ b/app/views/finance/update_monthly_report.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("/images/show_finance.png") %>
+  <%= image_tag("/images/show_finance.png") %>
   <h1><%= t('transactions') %></h1>
   <h3><%= t('finance_transactions_view') %></h3>
   <div id="app-back-button">
@@ -28,116 +28,109 @@
 <div id="inner-tab-menu">
   <ul>
     <li><%= link_to "#{t('pdf_report')}",
-            {:controller => "finance", :action => "transaction_pdf", :start_date => @start_date, :end_date=>@end_date},:target => '_blank' %></li>
+        {:controller => "finance", :action => "transaction_pdf", :start_date => @start_date, :end_date=>@end_date},:target => '_blank' %></li>
   </ul>
 </div>
 <div id="page-yield">
 
   <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
-    
-      <tr class="tr-head">
-        <td><%= t('sl_no') %></td>
-        <td><%= t('particulars') %></td>
-        <td><%= t('expenses') %> ( <%= currency %> )</td>
-        <td><%= t('income') %> ( <%= currency %> )</td>
-        <td><%= t('date_text') %></td>
-      </tr>
-      <tr class="tr-blank"></tr>
-      <% index = 0  %>
-      <%income_total = 0%>
-      <%expenses_total = 0%>
 
-      <% unless @hr.nil? %>
+    <tr class="tr-head">
+      <td><%= t('sl_no') %></td>
+      <td><%= t('particulars') %></td>
+      <td><%= t('expenses') %> ( <%= currency %> )</td>
+      <td><%= t('income') %> ( <%= currency %> )</td>
+      <td><%= t('date_text') %></td>
+    </tr>
+    <tr class="tr-blank"></tr>
+    <% index = 0  %>
+    <%income_total = 0%>
+    <%expenses_total = 0%>
 
-        <tr class="tr-odd">
-          <td class="col-1"><%= index+=1 %></td>
-          <% unless @salary == 0 %>
-            <td class="col-2"><%= link_to "#{t('salary_account')}" , :action => 'salary_department' , :start => @start_date,:end => @end_date%> </td>
-          <% else %>
-            <td class="col-2"><%= t('salary_account') %></td>
-          <% end %>
-          <td class="col-3" align="right"><%= @salary[:total_salary]%></td>
-          <td> </td>
-          <td class="col-3"> - </td>
-        </tr>
-
-      <% end %>
-
-      <tr class="tr-even">
-      <td class="col-1"><%= index+=1 %></td>
-        <% unless @donations_total == 0 %>
-          <td class="col-2"><%= link_to "#{t('donations')}" , :action => 'donations_report',:start => @start_date,:end => @end_date%></td>
-        <% else %>
-          <td class="col-2"><%= t('donations') %></td>
-        <% end %>
-        <td></td>
-        <td class="col-3" align="right"><%=@donations_total%></td>
-        <td class="col-3"> - </td>
-      </tr>
-
+    <% unless @hr.nil? %>
 
       <tr class="tr-odd">
         <td class="col-1"><%= index+=1 %></td>
-        <% unless @transactions_fees == 0 %>
-          <td class="col-2"><%= link_to "#{t('fees_account')}" , :action => 'fees_report' , :start => @start_date,:end => @end_date%> </td>
+        <% unless @salary == 0 %>
+          <td class="col-2"><%= link_to "#{t('salary_account')}" , :action => 'salary_department' , :start => @start_date,:end => @end_date%> </td>
         <% else %>
-          <td class="col-2"><%= t('fees_account') %></td>
+          <td class="col-2"><%= t('salary_account') %></td>
         <% end %>
-        <td></td>
-        <td class="col-3" align="right"><%=@transactions_fees%></td>
+        <td class="col-3" align="right"><%= @salary[:total_salary]%></td>
+        <td> </td>
         <td class="col-3"> - </td>
       </tr>
-      <% FedenaPlugin::FINANCE_CATEGORY.each do |category| %>
+
+    <% end %>
+
+    <tr class="tr-even">
+      <td class="col-1"><%= index+=1 %></td>
+      <% unless @donations_total == 0 %>
+        <td class="col-2"><%= link_to "#{t('donations')}" , :action => 'donations_report',:start => @start_date,:end => @end_date%></td>
+      <% else %>
+        <td class="col-2"><%= t('donations') %></td>
+      <% end %>
+      <td></td>
+      <td class="col-3" align="right"><%=@donations_total%></td>
+      <td class="col-3"> - </td>
+    </tr>
+
+
+    <tr class="tr-odd">
+      <td class="col-1"><%= index+=1 %></td>
+      <% unless @transactions_fees == 0 %>
+        <td class="col-2"><%= link_to "#{t('fees_account')}" , :action => 'fees_report' , :start => @start_date,:end => @end_date%> </td>
+      <% else %>
+        <td class="col-2"><%= t('fees_account') %></td>
+      <% end %>
+      <td></td>
+      <td class="col-3" align="right"><%=@transactions_fees%></td>
+      <td class="col-3"> - </td>
+    </tr>
+    <% FedenaPlugin::FINANCE_CATEGORY.each do |category| %>
       <tr class="tr-<%=cycle('even','odd')%>">
         <td class="col-1"><%= index+=1 %></td>
-          <td class="col-2"><%= link_to "#{t(category[:category_name]+'_account')}" , category[:destination].merge(:start => @start_date,:end => @end_date)%> </td>
+        <td class="col-2"><%= link_to "#{t(category[:category_name]+'_account')}" , category[:destination].merge(:start => @start_date,:end => @end_date)%> </td>
         <td></td>
         <td class="col-3" align="right"><%=@category_transaction_totals["#{category[:category_name]}"]%></td>
         <td class="col-3"> - </td>
       </tr>
-      <% end %>
-      
-      <% @other_transactions.each_with_index do |t,i| %>
-        <tr class="tr-<%= cycle("even","odd") %>">
-          <td class ="col-1"><%=i+index+1%></td>
-          <% if t.category.is_income? and t.master_transaction_id == 0%>
-            <td class="col-2"><%= t.title %> </td>
-            <td></td>
-            <td class="col-3" align="right"><%=  t.amount%></td>
-            <td class="col-3"><%= I18n.l(t.transaction_date,:format=>"%m-%d-%Y")%></td>
-            <%income_total +=t.amount%>
+    <% end %>
 
-          <%else%>
-            <td class="col-2"><%= t.title %> </td>
-            <td class="col-3" align="right"><%=  t.amount%></td>
-            <td></td>
-            <td class="col-3"><%= I18n.l(t.transaction_date,:format=>"%m-%d-%Y")%></td>
-
-            <%expenses_total +=t.amount%>
-          <%end%>
-        </tr>
-      <%end%>
-      <tr class="tr-blank"></tr>
-      <tr class="tr-odd">
-        <td class="col-1"> </td>
-        <td class="col-2"><%= t('grand_total') %></td>
-        <% if @grand_total >= 0 %>
-          <td></td>
-          <td class="col-3" align="right"><%= sprintf("%.2f",@grand_total)%></td>
-          
-        <% else %>
-          
-          <td class="col-3" align="right"><%= sprintf("%.2f",@grand_total * -1) %></td>
-          <td></td>
-        <% end %>
-          <td></td>
+    <% @other_transaction_categories.each_with_index do |t,i| %>
+      <% income = t.total_income(@start_date,@end_date) %>
+      <% expense = t.total_expense(@start_date,@end_date) %>
+      <tr class="tr-<%= cycle("even","odd") %>">
+        <td class ="col-1"><%=i+index+1%></td>
+        <td class="col-2"><%= link_to t.name,:controller => "finance",:action => "income_details",:start => @start_date,:end => @end_date,:id => t.id %> </td>
+        <td class="col-3" align="right"><%= expense %></td>
+        <td class="col-3" align="right"><%= income %></td>
+        <td class="col-3">-</td>
+        <%income_total +=income %>
+        <%expenses_total +=expense %>
       </tr>
-   
+    <%end%>
+    <tr class="tr-blank"></tr>
+    <tr class="tr-odd">
+      <td class="col-1"> </td>
+      <td class="col-2"><%= t('grand_total') %></td>
+      <% if @grand_total >= 0 %>
+        <td></td>
+        <td class="col-3" align="right"><%= sprintf("%.2f",@grand_total)%></td>
+
+      <% else %>
+
+        <td class="col-3" align="right"><%= sprintf("%.2f",@grand_total * -1) %></td>
+        <td></td>
+      <% end %>
+      <td></td>
+    </tr>
+
   </table>
 
   <br/>
   <br/>
- <% unless @salary == 0 and @donations_total == 0 and @transactions_fees and @other_transactions.empty? %>
+  <% unless @salary == 0 and @donations_total == 0 and @transactions_fees and @other_transactions.empty? %>
     <script type="text/javascript" src="/javascripts/swfobject.js"></script>
     <%= @graph %>
   <% end %>
